SF Primes/src/objects/Account_Plan__c.object
<CustomObject>
    <description>This object houses the Account Plan for a Digital Services specialist.  The Account Plan specifically pertains to the WebID object.  There may be multiple account plans across an account for a position if there is more than one webid, but there should only be one Account Plan per specialist per WebID.</description>
    <fields>
        <fullName>AA_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by a stored procedure that looks at related Account Plan records with record type AA Account Plan on the webid.</description>
        <inlineHelpText>This link will open the Advocate’s Account Plan on this webid.</inlineHelpText>
        <label>AA Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AA_DSM_Date_Last_Teamed__c</fullName>
        <description>This field is updated via a stored procedure that looks at attendees logged on both Spoke To and Internal Teaming calls.  The output should be the last date the DAA teamed with either position, regardless of whether or not the call was logged in the 90 day window.</description>
        <inlineHelpText>The last date of a Spoke To or Internal Teaming call that had a Digital Solutions Manager listed as an attendee.  Updated nightly.</inlineHelpText>
        <label>AA/DSM Date Last Teamed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_DSM_Teaming_Attempts__c</fullName>
        <description>This field is updated via a stored procedure that looks at attendees logged on both Spoke To and Internal Teaming calls.  The output is the count of Left Message or Internal Left Message calls to the Advocate or DSM within the last 90 days.</description>
        <inlineHelpText>The count of how many Internal – Left Message or Left Message calls logged with a DSM or AA listed as an attendee in the last 90 days.  Updated nightly.</inlineHelpText>
        <label>AA/DSM Teaming Attempts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AA_DSM_Teaming_Status__c</fullName>
        <description>This field is updated via a stored procedure that looks at attendees logged on both Spoke To and Internal Teaming calls.  The requirement is to team once per quarter.  The output should be: Teamed with AA, Teamed with DSM, Teaming Needed.  If teamed with either AA or DSM, then display either/both applicable values.  Only if neither was teamed within 90 days, then list Teaming Needed.</description>
        <inlineHelpText>Will be &quot;Teaming Needed&quot; if there has not been a Spoke To or Internal Teaming call logged that had a Digital Solutions Manager or Account Advocate listed as an attendee in the last 90 days.  Updated nightly.</inlineHelpText>
        <label>AA/DSM Teaming Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AA_Data_Quality_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated by a workflow to show a number between 1 and 5 that is used in another field to show a star rating for the Account Plan</description>
        <label>AA Data Quality Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AA_Data_Quality_Score__c</fullName>
        <formula>IMAGE(CASE( AA_Data_Quality_Count__c ,
6, &quot;/img/samples/stars_500.gif&quot;, 
5, &quot;/img/samples/stars_500.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
3, &quot;/img/samples/stars_300.gif&quot;, 
2, &quot;/img/samples/stars_300.gif&quot;, 
1, &quot;/img/samples/stars_100.gif&quot;,
0, &quot;/img/samples/stars_000.gif&quot;, 
null), &quot;&quot;)</formula>
        <inlineHelpText>Each item counts as a star.  Dealership Health, Dealer Hurt, Discover, Action Due Date in the future, and any of the following - Sales Process, Perceived Reputation, Fixed Ops and Location.</inlineHelpText>
        <label>Data Quality Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_Date_Last_Teamed__c</fullName>
        <description>This field is populated by a stored procedure calculation that looks for the last Spoke To or Internal Teaming call logged with the Account Advocate listed as an Attendee.</description>
        <inlineHelpText>The last time a call was logged with an Account Advocate listed as an attendee.  Updated nightly.</inlineHelpText>
        <label>AA Date Last Teamed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_Echelon_Level__c</fullName>
        <formula>WebID__r.AA_Echelon_Level__c</formula>
        <inlineHelpText>This is calculated from active installed base. If you see an echelon product that is active, have your manager submit an Inquiry - Service Reports &amp; Applications case with the webid and product.</inlineHelpText>
        <label>AA Echelon Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_Manager_Notes__c</fullName>
        <inlineHelpText>This field is only visible to Service Managers.</inlineHelpText>
        <label>AA Manager Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AA_Website_Scan_Tool_URL__c</fullName>
        <formula>WebID__r.Website_Scan_Tool_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is populated on the WebID.</inlineHelpText>
        <label>AA: Website Scan Tool URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_Echelon_Level__c</fullName>
        <label>AMA Echelon Level</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AMA_Help_Description__c</fullName>
        <label>AMA Help Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Help_List_Date__c</fullName>
        <label>AMA Help List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AMA_Help_List_Manager_Comments__c</fullName>
        <label>AMA Help List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Help_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMA Help List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMA_Last_IO_Updated__c</fullName>
        <label>Last IO Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AMA_Logo_Name__c</fullName>
        <label>AMA Logo Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Region__c</fullName>
        <formula>Account__r.AMA_Region__c</formula>
        <label>AMA Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_Regional_Alias__c</fullName>
        <formula>Account__r.AMA_Regional_Alias__c</formula>
        <label>AMA Regional Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Advocate__c</fullName>
        <description>This field pulls the Advocate value from the Webid.</description>
        <formula>WebID__r.Account_Advocate__r.FirstName &amp; &quot; &quot; &amp; WebID__r.Account_Advocate__r.LastName &amp; 
IF( isblank(WebID__r.Account_Advocate__r.Extension ), &quot;&quot;, &quot; - Ext: &quot;&amp; WebID__r.Account_Advocate__r.Extension )</formula>
        <label>Account Advocate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Goals__c</fullName>
        <label>Account Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Notes_Last_Updated_By__c</fullName>
        <description>Account Notes Last Updated By - data is populated in workflow Update – Account Notes Last Updated</description>
        <label>Account Notes Last Updated By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Notes_Last_Updated__c</fullName>
        <description>Account Notes Last Updated populated by Workflow Update – Account Notes Last Updated</description>
        <label>Account Notes Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <label>Account Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Status_PIC__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Secondary, No Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Secondary, Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Primary, No Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Primary, Minimal Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Primary, Large Spend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>This field is populated by a stored procedure that looks at WebID, Case, and Installed Base/Service Contract items that are specifically related to the product supported by the Specialist.</description>
        <inlineHelpText>Updated nightly. An EMS Account Plan with a &apos;Deferred&apos; status signals that you should refer to the Onstation WebID EMS Account Plan for updates.</inlineHelpText>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Last_Modified__c</fullName>
        <inlineHelpText>This is the last time a Strategy item was updated (includes when a record was added). You may need to refresh your browser after changes to show the most recent date.</inlineHelpText>
        <label>Action Last Modified</label>
        <summarizedField>Monthly_Maintenance__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Monthly_Maintenance__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ad_Review1__c</fullName>
        <description>This will link to ad creator.</description>
        <inlineHelpText>This will link to ad creator.</inlineHelpText>
        <label>Ad Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ad_Review2__c</fullName>
        <description>This will link to ad creator if there are multiple DAP products on the account.</description>
        <inlineHelpText>This will link to ad creator if there are multiple DAP products on the account.</inlineHelpText>
        <label>Ad Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ad_Review3__c</fullName>
        <description>This will link to ad creator if there are multiple DAP products on the account.</description>
        <inlineHelpText>This will link to ad creator if there are multiple DAP products on the account.</inlineHelpText>
        <label>Ad Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Additional_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For PowerSEO this is the Off Page Analyst</inlineHelpText>
        <label>Additional Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addl_Resource_Is_Me__c</fullName>
        <description>This field can be used in views and reports to determine whether or not the running user is the Additional Resource.</description>
        <formula>IF( $User.Id = Additional_Resource__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addl Resource Is Me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocate_Email__c</fullName>
        <description>Do not put this field on the page layout.  This should be populated by a trigger.</description>
        <label>Advocate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>All_Focus_Areas__c</fullName>
        <description>Links out to a report that shows all Focus Areas</description>
        <formula>HYPERLINK(&quot;/00O40000003CJTY&quot;, &quot;All&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Focus Areas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_URLs__c</fullName>
        <label>Alternative URLs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_GEOs__c</fullName>
        <inlineHelpText>The GEOs you CAN go after. These are not being targeted now, but have been approved to be added when strategy and timing permits.</inlineHelpText>
        <label>Dealer Requested GEOs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BAC_Dealer_Code__c</fullName>
        <description>Pulls from the same field on the related WebID.</description>
        <formula>WebID__r.BAC_Dealer_Code__c</formula>
        <label>BAC/Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Webmaster_Tools_Submitted_To__c</fullName>
        <inlineHelpText>Select Bing Webmaster Tools Login</inlineHelpText>
        <label>Bing Webmaster Tools Submitted To</label>
        <picklist>
            <picklistValues>
                <fullName>procareseo2@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo3@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo4@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo5@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo6@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo7@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo8@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo9@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo10@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo11@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo12@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo13@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo14@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo15@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo16@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo17@gmail.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bulk_Upload_Date__c</fullName>
        <description>This field is used to force triggers/workflows to fire when updated.</description>
        <label>Bulk Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAM_Email__c</fullName>
        <description>Do not put this field on the page layout.  This should be populated by a trigger.</description>
        <label>CAM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CB_SVC_Business_CTN__c</fullName>
        <label>Business Listing CTN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_SVC_Citation_Flow__c</fullName>
        <label>Citation  Flow</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_SVC_Dealer_Billing_Amount_DG__c</fullName>
        <description>Current billing amount for non Digital products for the whole dealer group.</description>
        <inlineHelpText>Current billing amount for non Digital products for the whole dealer group.</inlineHelpText>
        <label>Dealer Billing Amount - DG</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_SVC_Dealer_Billing_Amount__c</fullName>
        <description>Current billing amount for non Digital products.</description>
        <inlineHelpText>Current billing amount for non Digital products.</inlineHelpText>
        <label>Dealer Billing Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Needed_This_Month__c</fullName>
        <description>The MM field that drives this is populated by a stored procedure that looks at the logged calls during the given month. Actual calls must be of type Spoke To and have a Call Focus populated, however, Left Message calls do reduce the countdown. The count starts at “2 Calls Remaining.” If there are 2 Left Message calls OR a Spoke To with a Call Focus, then the count goes down to “1 Call Remaining.” If there are 4 Left Messages, 2 Left Messages and 1 Spoke To with Call Focus, or 2 Spoke To with Call Focus, then the indicator reads “Completed.”</description>
        <inlineHelpText>The call countdown goes down if 2 Left Message calls are logged or if 1 Spoke To with a Call Focus is logged. Updated nightly.</inlineHelpText>
        <label>Calls Needed This Month</label>
        <summarizedField>Monthly_Maintenance__c.Call_Status_Calc__c</summarizedField>
        <summaryFilterItems>
            <field>Monthly_Maintenance__c.This_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Monthly_Maintenance__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Capacity_Override_Hours__c</fullName>
        <description>Number of hours it takes to manage the account per month. This is used in capacity reporting.</description>
        <inlineHelpText>Please enter the number in hours it takes to manage this account per month. This is used in capacity reporting.</inlineHelpText>
        <label>Capacity Override Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_in_Email_Last_Sent__c</fullName>
        <inlineHelpText>Please indicate the last date you sent a check-in email to this dealership.</inlineHelpText>
        <label>Check-in Email Last Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_in_Email_Status__c</fullName>
        <formula>IF(OR(ISBLANK( Check_in_Email_Last_Sent__c ),  Check_in_Email_Last_Sent__c &lt;( TODAY() - 60)),
   &quot;Check-in Email Recommended&quot;,
   &quot;Completed&quot;)</formula>
        <inlineHelpText>Based on whether or not the date in the Check-in Email Last Sent field is within the last 60 days.  If there isn’t a date listed, this field will read “Check-in Email Recommended.”</inlineHelpText>
        <label>Check-in Email Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citation_Flow_Date__c</fullName>
        <label>Citation Flow Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Account_Manager__c</fullName>
        <formula>WebID__r.Client_Account_Manager__r.FirstName &amp;&quot; &quot;&amp; WebID__r.Client_Account_Manager__r.LastName &amp;
IF(ISBLANK( WebID__r.Client_Account_Manager__r.Extension ),&quot;&quot;,&quot; - Ext: &quot;&amp; WebID__r.Client_Account_Manager__r.Extension )</formula>
        <label>Marketing Strategist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_Level__c</fullName>
        <label>Coaching Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coaching_Notes_Last_Modified_By__c</fullName>
        <label>Coaching Notes Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_Notes_Last_Modified_Date__c</fullName>
        <label>Coaching Notes Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Coaching_Notes__c</fullName>
        <label>Coaching Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Dealer&apos;s known competitors. Used by SMS to ensure no representative gets ownership of 2 competing accounts.</description>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Creative_Case_Limit__c</fullName>
        <label>Creative Case Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creative_Case_Tally__c</fullName>
        <label>Creative Case Tally</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Critical_Items__c</fullName>
        <label>Critical Items</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Health__c</fullName>
        <inlineHelpText>This field will be displayed in a report that may be viewed by our clients.</inlineHelpText>
        <label>Current Health</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Issues__c</fullName>
        <label>Current Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Currently_Targeted_GEOs__c</fullName>
        <inlineHelpText>The geographies that you are currently targeting.</inlineHelpText>
        <label>Currently Targeted GEOs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Folder_Link__c</fullName>
        <label>Customer Folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DAA_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by a stored procedure that looks at related Account Plan records with record type DAA Account Plan on the webid.</description>
        <inlineHelpText>This link will open the Digital Advertising Analyst’s Account Plan on this webid.</inlineHelpText>
        <label>DAA Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans (DAA Account Plan Link)</relationshipLabel>
        <relationshipName>DAA_Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAA_Data_Last_Updated__c</fullName>
        <description>This field is updated in the Update – DAA Data last Updated workflow.</description>
        <inlineHelpText>The last date any of the Ad Review, DMA or Targeted Radius Details, Dealer Logo, DAA Taglines, or DAA Geography fields were updated.</inlineHelpText>
        <label>DAA Data Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAA_Date_Last_Teamed__c</fullName>
        <description>This field is updated via a stored procedure that looks at related calls with a Type of Spoke to or Internal Teaming and an Attendee including the Digital Advertising Analyst.  The requirement is that a teaming call that meets the listed criteria take place once per quarter.</description>
        <inlineHelpText>The last date of a Spoke To or Internal Teaming call that had a Digital Advertising Analyst listed as an attendee.  There should be a teaming call logged every quarter. Updated nightly.</inlineHelpText>
        <label>DAA Date Last Teamed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAA_Geography__c</fullName>
        <description>Formerly &quot;OMS Geography&quot;. Formerly &quot;DAA Geography&quot;</description>
        <label>DAA Targeting Tactic</label>
        <picklist>
            <picklistValues>
                <fullName>DMA Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmanaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAA_Taglines__c</fullName>
        <description>Formerly &quot;OMS Taglines.&quot;</description>
        <label>DAA Taglines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DAA_Teaming_Status__c</fullName>
        <description>This field is updated via a stored procedure that looks at related calls with a Type of Spoke to or Internal Teaming and an Attendee including the Digital Advertising Analyst.  The requirement is that a teaming call that meets the listed criteria take place once per quarter.</description>
        <inlineHelpText>Will be &quot;Teaming Completed&quot; if there has been a Spoke To or Internal Teaming call that had a Digital Advertising Analyst listed as an attendee in the last 90 days.  Updated nightly.</inlineHelpText>
        <label>DAA Teaming Status</label>
        <picklist>
            <picklistValues>
                <fullName>Teaming Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaming Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAP_Sent_Calc__c</fullName>
        <description>Feeds to DAP Sent for EMS Dashboards.</description>
        <label>DAP Sent Calc</label>
        <summarizedField>Monthly_Maintenance__c.DAP_Sent__c</summarizedField>
        <summaryFilterItems>
            <field>Monthly_Maintenance__c.This_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Monthly_Maintenance__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DAP_Sent__c</fullName>
        <description>Used for Dashboard report. May have to put on page layout for field to calculate.</description>
        <formula>IF( DAP_Sent_Calc__c &gt;0,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>DAP Sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Echelon_Level__c</fullName>
        <formula>IF(OR( DA_Echelon_Manager_Override__c =&quot;&quot;, ISBLANK(DA_Echelon_Manager_Override__c )), TEXT(DA_Echelon_Spend_Level__c) , DA_Echelon_Manager_Override__c )</formula>
        <inlineHelpText>If the DA Echelon Manager Override field is filled out, that is the Echelon level, otherwise it is based on Spend.</inlineHelpText>
        <label>DA Echelon Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Echelon_Manager_Override__c</fullName>
        <formula>TEXT( Account__r.DA_Echelon_Manager_Override__c )</formula>
        <inlineHelpText>This is filled out at the account level by the DA Manager.</inlineHelpText>
        <label>DA Echelon Manager Override</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Echelon_Spend_Level__c</fullName>
        <inlineHelpText>This field is filled out through the nightly process. The database calculates all digital advertising spend across the dealer group or account if the dealership is not part of a dealer group.</inlineHelpText>
        <label>DA Echelon Spend Level</label>
        <picklist>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Help_List_Date__c</fullName>
        <description>This field is populated by the Update – DA Help List Date workflow and the Update DA Help List Removed workflow.</description>
        <inlineHelpText>The date the dealership was added to the help list.</inlineHelpText>
        <label>DA Help List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DA_Help_List_Description__c</fullName>
        <description>The workflow Update –DAHelp List Removed will clear this field once the dealer is removed from the help list.</description>
        <label>DA Help List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DA_Help_List_Manager_Comments__c</fullName>
        <inlineHelpText>This field is only visible to managers.</inlineHelpText>
        <label>DA Help List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>